# Guias

./: 404.html  Diagrama sem nome.drawio  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yaml
docs/: index.md
docs/matematica-estatistica/: inicio.md  resolvendo-o-campo-minado-com-python.md
matematica-estatistica/inicio/: index.html
matematica-estatistica/resolvendo-o-campo-minado-com-python/: index.html
outros/guia-gitflow/: README.md
search/: search_index.json
