[tool.poetry]
name = "guias"
version = "0.1.0"
description = ""
authors = ["Jose Edmario <56650001+JEdmario16@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.26"
mkdocs-git-authors-plugin = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
